// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package chronicle.codegen;

option java_package = "com.google.android.libraries.pcc.chronicle.codegen";
option java_multiple_files = true;

message SimpleTestProto1 {
  string field1 = 1;
  uint32 field2 = 2;
}

message SimpleTestProto2 {
  string field3 = 1;
  string field4 = 2;
}
